MGRENTITLE-197 - copy descriptor to create keyckloak resources